# foodie

./: .gitignore  .worker.toml  deploy
.docker/: Caddyfile  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: rust.yml
backend/: Cargo.toml
backend/.docker/: Dockerfile.migrations.prod  Dockerfile.prod
common/: Cargo.toml
frontend/: Cargo.toml  Trunk.toml  index.html  input.css
frontend/.docker/: Dockerfile.prod
frontend/src/: main.rs
frontend/src/components/: custom_route.rs  dropdown.rs  input.rs  loading.rs  menu.rs  mod.rs  modal.rs  navbar.rs  not_found.rs  stepper.rs  textarea.rs
frontend/src/components/form/: mod.rs
frontend/src/components/form/form_fields/: form_field_checkbox.rs  form_field_combobox.rs  form_field_duration.rs  form_field_input.rs  form_field_number_input.rs  form_field_select.rs  form_field_textarea.rs  mod.rs
frontend/src/components/icons/: chevron_down.rs  chevron_up.rs  clock_icon.rs  close_icon.rs  error_icon.rs  file_upload_icon.rs  minus_icon.rs  modify_icon.rs  more_vertical_icon.rs  plus_icon.rs  shopping_cart_icon.rs  success_icon.rs  warning_icon.rs
frontend/src/context/: auth.rs  toast.rs
frontend/src/views/: home.rs  mod.rs  profile.rs
frontend/src/views/auth/: google_oauth.rs  login_page.rs
frontend/src/views/friends/: friends.rs
frontend/src/views/recipe/: create_recipe.rs  edit_recipe.rs  mod.rs  recipe.rs  recipe_image.rs  recipes.rs
frontend/src/views/recipe/recipe_form/: mod.rs  recipe_info.rs  recipe_ingredients.rs  recipe_steps.rs
frontend/style/: output.css
(+40 files in other folders)
