[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
anyhow = "1.0.71"
leptos = { version = "0.7.7", features = ["nightly", "csr"] }
leptos_router = { version = "0.7.7" }
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
serde_json = "1.0.96"
web-sys = { version = "0.3.61", features = ["Event", "HtmlElement", "Document", "File", "FileList", "Location"] }
chrono = { version = "0.4.26", features = ["serde"] }
console_error_panic_hook = "0.1.7"
rust_decimal = "1.34.3"
num = "0.4.3"
uuid = { version = "1.14", features = ["v4", "rng-getrandom"]}
getrandom = { version = "0.3", features = ["wasm_js"]}
